--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <div class="inputs">
     <div>
         <label for="">hieght:</label>
-        <input type="text" id="hieght">
+        <input type="text" id="height" placeholder="enter height">
     </div>
     <div>
         <label for="">base:</label>
-        <input type="text" id="base">
+        <input type="text" id="base" placeholder="enter base">
     </div>
     <div>
-        <button>calculate</button>
+        <button id="cal">calculate</button>
     </div>
     <div>
         <label for="">Results:</label>
-        <input type="text" id="Results" readonly>
+        <input type="text" id="results" readonly>
     </div>
 </div>
 
